Add support for Github license
Fixes #280
<https://github.com/badges/shields/issues/280>

--- a/index.html
+++ b/index.html
@@ -291,6 +291,10 @@ When that is implemented, change the placeholder to
   <td><img src='//img.shields.io/github/release/qubyte/rubidium.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
   </tr>
+  <tr><th> GitHub license: </th>
+  <td><img src='//img.shields.io/github/license/qubyte/rubidium.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/license/qubyte/rubidium.svg</code></td>
+  </tr>
   <tr><th> Chef cookbook: </th>
   <td><img src='//img.shields.io/cookbook/v/chef-sugar.svg' alt=''/></td>
   <td><code>https://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
