Appveyor: Allow specific branch also in index.html

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ When that is implemented, change the placeholder to
     <td><img src='//img.shields.io/appveyor/ci/gruntjs/grunt.svg' alt=''/></td>
     <td><code>https://img.shields.io/appveyor/ci/gruntjs/grunt.svg</code></td>
   </tr>
+  <tr><th> AppVeyor branch: </th>
+    <td><img src='//img.shields.io/appveyor/ci/gruntjs/grunt/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/appveyor/ci/gruntjs/grunt/master.svg</code></td>
+  </tr>
   <tr><th> Codeship: </th>
     <td><img src='//img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg</code></td>
