--- a/try.html
+++ b/try.html
@@ -65,7 +65,7 @@ When that is implemented, change the placeholder to
 <form action='javascript:void 0'>
   <input name='projectSearch' id='projectSearch' autofocus placeholder='search'/>
 </form>
-<hr class='spacing'/>
+<a href='https://gratipay.com/Shields/' style='text-decoration:none;color:rgba(0,0,0,0.1)'>donate</a>
 
 <h3> Build </h3>
 <table class='badge'><tbody>
