--- a/index.html
+++ b/index.html
@@ -245,6 +245,10 @@ When that is implemented, change the placeholder to
   <td><img src='//img.shields.io/sourceforge/dt/sevenzip.svg' alt=''/></td>
   <td><code>https://img.shields.io/sourceforge/dt/sevenzip.svg</code></td>
   </tr>
+  <tr><th data-keywords='atom'> apm: </th>
+  <td><img src='//img.shields.io/apm/dm/vim-mode.svg' alt=''/></td>
+  <td><code>https://img.shields.io/apm/dm/vim-mode.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Version </h3>
 <table class='badge'><tbody>
@@ -340,6 +344,10 @@ When that is implemented, change the placeholder to
   <td><img src='//img.shields.io/wordpress/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/v/akismet.svg</code></td>
   </tr>
+  <tr><th data-keywords='atom'> apm: </th>
+  <td><img src='//img.shields.io/apm/v/vim-mode.svg' alt=''/></td>
+  <td><code>https://img.shields.io/apm/v/vim-mode.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3> Miscellaneous </h3>
@@ -395,6 +403,10 @@ When that is implemented, change the placeholder to
   <tr><th data-keywords='node'> npm: </th>
     <td><img src='//img.shields.io/npm/l/express.svg' alt=''/></td>
     <td><code>https://img.shields.io/npm/l/express.svg</code></td>
+  </tr>
+  <tr><th data-keywords='atom'> apm: </th>
+    <td><img src='//img.shields.io/apm/l/vim-mode.svg' alt=''/></td>
+    <td><code>https://img.shields.io/apm/l/vim-mode.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
     <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
