SensioLabs Insight support #306

--- a/try.html
+++ b/try.html
@@ -153,6 +153,10 @@ When that is implemented, change the placeholder to
     <td><img src='/hhvm/symfony/symfony/2.4.0.0.svg' alt=''/></td>
     <td><code>https://img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg</code></td>
   </tr>
+  <tr><th> SensioLabs Insight: </th>
+      <td><img src='/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
+      <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Downloads </h3>
 <table class='badge'><tbody>
