--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ When that is implemented, change the placeholder to
 <hr class='spacing'/>
 
 <p>
-<code><span id='imgUrlPrefix'>http://img.shields.io/badge/</span>&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code>
+<code><span id='imgUrlPrefix'>https://img.shields.io/badge/</span>&lt;SUBJECT&gt;-&lt;STATUS&gt;-&lt;COLOR&gt;.svg</code>
 </p>
 <table class=centered><tbody>
   <tr><td>   Dashes <code>--</code>
