--- a/try.html
+++ b/try.html
@@ -303,6 +303,10 @@ When that is implemented, change the placeholder to
   <td><img src='/github/license/qubyte/rubidium.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/license/qubyte/rubidium.svg</code></td>
   </tr>
+  <tr><th> GitHub forks: </th>
+  <td><img src='/github/forks/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
+  </tr>
   <tr><th> Chef cookbook: </th>
   <td><img src='/cookbook/v/chef-sugar.svg' alt=''/></td>
   <td><code>https://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
