Added official Libscore badge

--- a/try.html
+++ b/try.html
@@ -439,6 +439,10 @@ When that is implemented, change the placeholder to
   <td><img src='/codacy/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
   <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
   </tr>
+  <tr><th> Libscore: </th>
+  <td><img src='/libscore/s/jQuery.svg' alt=''/></td>
+  <td><code>https://img.shields.io/libscore/c/jQuery.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Your Badge </h2>
