Capitalize P in WordPress
WordPress is spelled with a capital P, just wanted to fix that. Thanks!

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title> Image Server </title>
 <meta name='viewport' content='width=device-width,initial-scale=1'>
 <meta name='description' content='We serve fast and scalable informational
-images as badges for GitHub, Travis CI, Jenkins, Wordpress and many more
+images as badges for GitHub, Travis CI, Jenkins, WordPress and many more
 services. Use them to track the state of your projects, or for promotional
 purposes.'>
 <link rel='icon' type='image/png' href='favicon.png'>
@@ -225,7 +225,7 @@ When that is implemented, change the placeholder to
   <td><img src='https://img.shields.io/hexpm/dt/plug.svg' alt=''/></td>
   <td><code>https://img.shields.io/hexpm/dt/plug.svg</code></td>
   </tr>
-  <tr><th> Wordpress: </th>
+  <tr><th> WordPress: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/dt/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
   </tr>
@@ -336,11 +336,11 @@ When that is implemented, change the placeholder to
   <td><img src='https://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg' alt=''/></td>
   <td><code>https://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg</code></td>
   </tr>
-  <tr><th> Wordpress plugin: </th>
+  <tr><th> WordPress plugin: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/v/akismet.svg</code></td>
   </tr>
-  <tr><th> Wordpress: </th>
+  <tr><th> WordPress: </th>
   <td><img src='https://img.shields.io/wordpress/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/v/akismet.svg</code></td>
   </tr>
@@ -432,7 +432,7 @@ When that is implemented, change the placeholder to
   <td><img src='https://img.shields.io/github/issues/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/issues/badges/shields.svg</code></td>
   </tr>
-  <tr><th> Wordpress rating: </th>
+  <tr><th> WordPress rating: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
