Talk.ai switch to /t/ and add to try

--- a/try.html
+++ b/try.html
@@ -446,6 +446,10 @@ When that is implemented, change the placeholder to 'search / project URL'
   <td><img src='/libscore/s/jQuery.svg' alt=''/></td>
   <td><code>https://img.shields.io/libscore/c/jQuery.svg</code></td>
   </tr>
+  <tr><th> Talk.ai: </th>
+  <td><img src='/talk/t/9c81ff703b.svg' alt=''/></td>
+  <td><code>https://img.shields.io/talk/t/9c81ff703b.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Your Badge </h2>
