Talk.ai switch to /t/ and add to try

--- a/try.html
+++ b/try.html
@@ -442,6 +442,10 @@ When that is implemented, change the placeholder to 'search / project URL'
   <td><img src='/codacy/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
   <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
   </tr>
+  <tr><th> Talk.ai: </th>
+  <td><img src='/talk/t/9c81ff703b.svg' alt=''/></td>
+  <td><code>https://img.shields.io/talk/t/9c81ff703b.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Your Badge </h2>
