add sonar coverage support

--- a/try.html
+++ b/try.html
@@ -124,6 +124,10 @@ When that is implemented, change the placeholder to 'search / project URL'
     <td><img src='/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
+  <tr><th> SonarQube Coverage: </th>
+    <td><img src='/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core:master/coverage.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core:master/coverage.svg</code></td>
+  </tr>
   <tr><th> TeamCity CodeBetter Coverage: </th>
     <td><img src='/teamcity/coverage/bt1242.svg' alt=''/></td>
     <td><code>https://img.shields.io/teamcity/coverage/bt1242.svg</code></td>
