--- a/index.html
+++ b/index.html
@@ -303,10 +303,6 @@ When that is implemented, change the placeholder to 'search / project URL'
   <td><img src='https://img.shields.io/github/release/qubyte/rubidium.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
   </tr>
-  <tr><th> GitHub forks: </th>
-  <td><img src='https://img.shields.io/github/forks/badges/shields.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
-  </tr>
   <tr><th> Chef cookbook: </th>
   <td><img src='https://img.shields.io/cookbook/v/chef-sugar.svg' alt=''/></td>
   <td><code>https://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
@@ -431,9 +427,17 @@ When that is implemented, change the placeholder to 'search / project URL'
     <td><img src='https://img.shields.io/wheelmap/a/2323004600.svg' alt='' /></td>
     <td><code>https://img.shields.io/wheelmap/a/2323004600.svg</code></td>
   </tr>
-  <tr><th> GitHub: </th>
+  <tr><th> GitHub issues: </th>
   <td><img src='https://img.shields.io/github/issues/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/issues/badges/shields.svg</code></td>
+  </tr>
+  <tr><th> GitHub forks: </th>
+  <td><img src='https://img.shields.io/github/forks/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
+  </tr>
+  <tr><th> GitHub stars: </th>
+  <td><img src='https://img.shields.io/github/stars/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/stars/badges/shields.svg</code></td>
   </tr>
   <tr><th> Wordpress rating: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg' alt=''/></td>
