--- a/try.html
+++ b/try.html
@@ -448,7 +448,7 @@ When that is implemented, change the placeholder to 'search / project URL'
   </tr>
   <tr><th> Libscore: </th>
   <td><img src='/libscore/s/jQuery.svg' alt=''/></td>
-  <td><code>https://img.shields.io/libscore/c/jQuery.svg</code></td>
+  <td><code>https://img.shields.io/libscore/s/jQuery.svg</code></td>
   </tr>
   <tr><th> Talk.ai: </th>
   <td><img src='/talk/t/9c81ff703b.svg' alt=''/></td>
