--- a/try.html
+++ b/try.html
@@ -434,6 +434,10 @@ When that is implemented, change the placeholder to 'search / project URL'
   <td><img src='/github/issues/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/issues/badges/shields.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub'></th>
+  <td><img src='/github/issues-raw/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
+  </tr>
   <tr><th> GitHub forks: </th>
   <td><img src='/github/forks/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
