website update: SonarQube, GitHub issues, libscore

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@ When that is implemented, change the placeholder to 'search / project URL'
     <td><img src='https://img.shields.io/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
+  <tr><th> SonarQube Coverage: </th>
+    <td><img src='https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core:master/coverage.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core:master/coverage.svg</code></td>
+  </tr>
   <tr><th> TeamCity CodeBetter Coverage: </th>
     <td><img src='https://img.shields.io/teamcity/coverage/bt1242.svg' alt=''/></td>
     <td><code>https://img.shields.io/teamcity/coverage/bt1242.svg</code></td>
@@ -431,6 +435,10 @@ When that is implemented, change the placeholder to 'search / project URL'
   <td><img src='https://img.shields.io/github/issues/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/issues/badges/shields.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub'></th>
+  <td><img src='https://img.shields.io/github/issues-raw/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
+  </tr>
   <tr><th> GitHub forks: </th>
   <td><img src='https://img.shields.io/github/forks/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
@@ -446,6 +454,10 @@ When that is implemented, change the placeholder to 'search / project URL'
   <tr><th> Codacy: </th>
   <td><img src='https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
   <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
+  </tr>
+  <tr><th> Libscore: </th>
+  <td><img src='https://img.shields.io/libscore/s/jQuery.svg' alt=''/></td>
+  <td><code>https://img.shields.io/libscore/s/jQuery.svg</code></td>
   </tr>
   <tr><th> Talk.ai: </th>
   <td><img src='https://img.shields.io/talk/t/9c81ff703b.svg' alt=''/></td>
