--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ Override the default left-hand-side text with
 </p>
 <p>
 We also support <code>.json</code>, <code>.png</code> and a few others,
-but use that responsively.
+but use them responsibly.
 </p>
 
 <h2> Like This? </h2>
