--- a/try.html
+++ b/try.html
@@ -156,6 +156,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><img src='/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
       <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
   </tr>
+  <tr><th> CircleCI: </th>
+      <td><img src='/circleci/project/BrightFlair/PHP.Gt.svg' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg</code></td>
+  </tr>
+  <tr><th> CircleCI branch: </th>
+      <td><img src='/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Downloads </h3>
 <table class='badge'><tbody>
@@ -586,6 +594,9 @@ is where the current server got started.
 </a>
 <a class='photo' href='https://github.com/jublo'>
   <img alt='jublo' src='https://avatars.githubusercontent.com/u/6348321?s=80'>
+</a>
+<a class='photo' href='https://github.com/g105b'>
+  <img alt='g105b' src='https://avatars2.githubusercontent.com/u/358014?v=3&s=80'>
 </a>
 <a class='photo' href='https://github.com/sebmck'>
   <img alt='sebmck' src='https://avatars.githubusercontent.com/u/853712?s=80'>
