--- a/try.html
+++ b/try.html
@@ -596,7 +596,7 @@ is where the current server got started.
   <img alt='jublo' src='https://avatars.githubusercontent.com/u/6348321?s=80'>
 </a>
 <a class='photo' href='https://github.com/g105b'>
-  <img alt='g105b' src='https://avatars2.githubusercontent.com/u/358014?v=3&s=80'>
+  <img alt='g105b' src='https://avatars2.githubusercontent.com/u/358014?s=80'>
 </a>
 <a class='photo' href='https://github.com/sebmck'>
   <img alt='sebmck' src='https://avatars.githubusercontent.com/u/853712?s=80'>
