Support GitHub followers

--- a/try.html
+++ b/try.html
@@ -450,6 +450,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/stars/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/stars/badges/shields.svg</code></td>
   </tr>
+  <tr><th> GitHub followers: </th>
+  <td><img src='/github/followers/espadrine.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/followers/espadrine.svg</code></td>
+  </tr>
   <tr><th> Wordpress rating: </th>
   <td><img src='/wordpress/plugin/r/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
