--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1/master.svg</code></td>
   </tr>
+  <tr><th> CircleCI: </th>
+      <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg</code></td>
+  </tr>
+  <tr><th> CircleCI branch: </th>
+      <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg</code></td>
+  </tr>
   <tr><th> Jenkins: </th>
     <td><img src='https://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
     <td><code>https://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
@@ -156,14 +164,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> SensioLabs Insight: </th>
       <td><img src='https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
       <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
-  </tr>
-  <tr><th> CircleCI: </th>
-      <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg' alt=''/></td>
-      <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg</code></td>
-  </tr>
-  <tr><th> CircleCI branch: </th>
-      <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
-      <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg</code></td>
   </tr>
 </tbody></table>
 <h3> Downloads </h3>
@@ -450,6 +450,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> GitHub stars: </th>
   <td><img src='https://img.shields.io/github/stars/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/stars/badges/shields.svg</code></td>
+  </tr>
+  <tr><th> GitHub followers: </th>
+  <td><img src='https://img.shields.io/github/followers/espadrine.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/followers/espadrine.svg</code></td>
   </tr>
   <tr><th> Wordpress rating: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg' alt=''/></td>
