Show [style|plastic] for the plastic badge
Fixes https://github.com/badges/shields/commit/3154c4d63821ec7723fcb05dd09f876c9e8bdcb5#commitcomment-9557852

--- a/index.html
+++ b/index.html
@@ -525,12 +525,12 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 
 <h2> Styles </h2>
 <p>
-The following styles are available:
+The following styles are available (flat is the default as of Feb 1st 2015):
 </p>
 <table><tbody>
   <tr>
-  <td><img src='https://img.shields.io/badge/style-flat-green.svg?style=plastic' alt=''/></td>
-  <td><code>https://img.shields.io/badge/style-flat-green.svg?style=plastic</code></td>
+  <td><img src='https://img.shields.io/badge/style-plastic-green.svg?style=plastic' alt=''/></td>
+  <td><code>https://img.shields.io/badge/style-plastic-green.svg?style=plastic</code></td>
   </tr>
   <tr>
   <td><img src='https://img.shields.io/badge/style-flat-green.svg?style=flat' alt=''/></td>
