rust license support

--- a/try.html
+++ b/try.html
@@ -414,6 +414,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/hackage-deps/v/lens.svg' alt=''/></td>
     <td><code>https://img.shields.io/hackage-deps/v/lens.svg</code></td>
   </tr>
+  <tr><th data-keywords='Rust'> Crates.io: </th>
+    <td><img src='/crates/l/rustc-serialize.svg' alt=''/></td>
+    <td><code>https://img.shields.io/crates/l/rustc-serialize.svg</code></td>
+  </tr>
   <tr><th> Requires.io: </th>
     <td><img src='/requires/github/celery/celery.svg' alt=''/></td>
     <td><code>https://img.shields.io/requires/github/celery/celery.svg</code></td>
