website update with rust

--- a/index.html
+++ b/index.html
@@ -212,6 +212,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/pypi/dd/Django.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/dd/Django.svg</code></td>
   </tr>
+  <tr><th data-keywords='Rust'> Crates.io: </th>
+  <td><img src='https://img.shields.io/crates/d/rustc-serialize.svg' alt=''/></td>
+  <td><code>https://img.shields.io/crates/d/rustc-serialize.svg</code></td>
+  </tr>
+  <tr><th data-keywords='Rust'> Crates.io: </th>
+  <td><img src='https://img.shields.io/crates/dv/rustc-serialize.svg' alt=''/></td>
+  <td><code>https://img.shields.io/crates/dv/rustc-serialize.svg</code></td>
+  </tr>
   <tr><th data-keywords='PHP'> Packagist: </th>
   <td><img src='https://img.shields.io/packagist/dm/doctrine/orm.svg' alt=''/></td>
   <td><code>https://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
@@ -282,6 +290,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Hackage: </th>
   <td><img src='https://img.shields.io/hackage/v/lens.svg' alt=''/></td>
   <td><code>https://img.shields.io/hackage/v/lens.svg</code></td>
+  </tr>
+  <tr><th data-keywords='Rust'> Crates.io: </th>
+  <td><img src='https://img.shields.io/crates/v/rustc-serialize.svg' alt=''/></td>
+  <td><code>https://img.shields.io/crates/v/rustc-serialize.svg</code></td>
   </tr>
   <tr><th data-keywords='PHP'> Packagist: </th>
   <td><img src='https://img.shields.io/packagist/v/symfony/symfony.svg' alt=''/></td>
